--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=bci-api
+server.port=8080
+server.address=0.0.0.0
+
+# H2 Datasource configuration + JPA
+spring.datasource.url=jdbc:h2:mem:bci-api;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.mode=always
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA/Hibernate properties
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+
+# Logs
+logging.level.root=WARN
+logging.level.web=INFO
+logging.level.backend.autopass=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# OpenAPI
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
