--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ logging.level.org.springframework.security=DEBUG
 # OpenAPI
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
