--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bci-api
-server.port=8080
 server.address=0.0.0.0
+server.port=${PORT:8080}
 
 # H2 Datasource configuration + JPA
 spring.datasource.url=jdbc:h2:mem:bci-api;DB_CLOSE_DELAY=-1
